<resources>
    <string name="app_name">beduShop</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="productos">Productos</string>

    <!--Carrito-->
    <string name="carrito">Carrito</string>
    <string name="cartBtn">Proceder al pago</string>

    <!--Pagando-->
    <string name="paidTitle1">Datos de pago</string>
    <string name="paidAddress">Dirección actual</string>
    <string name="paidMethod">Método de pago actual</string>
    <string name="paidTitle2">Resumen</string>
    <string name="paidSubtotal">Subtotal</string>
    <string name="paidSend">Envío</string>
    <string name="paidTotal">Total</string>
    <string name="paidBtn">Pagar</string>

    <!--Notificacion-->
    <string name="notifTitle">Compra realizada</string>
    <string name="notifBody">Tu pedido llegará en una  semana</string>

    <!--Registro-->
    <string name="registrese">Registrese aquí</string>
    <string name="inicie">Iniciar sesión</string>
    <string name="correo">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="nombreCompleto">Nombre completo</string>
    <string name="telefono">Teléfono</string>
    <string name="beduShop">Bedu Shop</string>
    <string name="beduBolsa">bolsa shop bedu</string>
    <string name="registro">Regístrate</string>
    <string name="textInputPass">Ingrese password</string>

    <string name="description">Descripción</string>
    <string name="nuevoProducto">Nuevo</string>
    <string name="agregarCarrito">Agregar al carrito</string>

    <string name="seisSinInteres">En 6 meses sin intereses</string>
    <string name="disponible"> Disponible en tu domicilio</string>
    <string name="entregaManiana">Entrega mañana</string>

    <string name="prodCerca">Productos cerca de ti</string>


    <!--Profile-->
    <string name="profileName">Usuario</string>
    <string name="profileMail">user@mail.com</string>
    <string name="profileAddresses">Mis direcciones</string>
    <string name="profilePaidMethod">Métodos de pago</string>
    <string name="profileOrders">Pedidos</string>
    <string name="profileNotifications">Notificaciones</string>
    <string name="profileChangePassword">Cambiar contraseña</string>
    <string name="profileCloseSession">Cerrar sesion</string>

    <!--Profile location-->
    <string name="locationTitle">Agregar dirección</string>
    <string name="locationCurrentTitle">Ubicación actual</string>
    <string name="locationAddressDescription">Calle 123, 5000 Córdoba, Córdoba capital, Argentina.</string>
    <string name="locationUpdate">Actualizar</string>

    <!--Sold-->
    <string name="soldThanks">Gracias por tu compra!</string>
    <string name="soldMsg1">Recibiras tu paquete pronto</string>
    <string name="soldBtn">Ir al menú principal</string>

</resources>