<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:id="@+id/screenLogin"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrese"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonIniciar"
        app:layout_constraintVertical_bias="0.213" />

    <ImageView
        android:id="@+id/bolsaBedu"
        android:layout_width="110dp"
        android:layout_height="111dp"
        android:layout_marginTop="82dp"
        android:contentDescription="@string/beduBolsa"
        android:src="@drawable/cabecera"
        app:layout_constraintBottom_toTopOf="@+id/textBeduShop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.625" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonIniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/inicie"
        android:theme="@style/Button.Orange"
        app:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <com.google.android.material.textfield.TextInputEditText
        app:boxBackgroundColor="@color/background"
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:autofillHints="emailAddress"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textBeduShop"
        />

    <com.google.android.material.textfield.TextInputEditText
        app:boxBackgroundColor="@color/background"
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <TextView
        android:id="@+id/textBeduShop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="242dp"
        android:text="@string/beduShop"
        android:textColor="@color/orange"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>