<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="413dp"
        android:layout_height="619dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline8"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp" />


    <!--<ImageView
        android:id="@+id/imageView"
        android:layout_width="133dp"
        android:layout_height="145dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/cabecera"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />-->

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="152dp"
        android:layout_height="121dp"
        android:id="@+id/profileImage"
        android:layout_marginTop="4dp"
        android:src="@drawable/cabecera"
        app:layout_constraintBottom_toTopOf="@+id/profileName"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.BeduCompras.CornerSize50Percent"
        app:strokeColor="@color/orange"
        app:strokeWidth="0dp" />

    <TextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:text="@string/profileName"
        android:textColor="@color/background"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <TextView
        android:id="@+id/profileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/profileMail"
        android:textColor="@color/background"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileName" />

    <Button
        android:id="@+id/profileAddresses"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:drawableLeft="@drawable/ic_baseline_location_on_24"
        android:outlineSpotShadowColor="@color/background"
        android:text="@string/profileAddresses"
        android:textAlignment="textStart"
        android:textSize="16dp"
        app:layout_constraintTop_toTopOf="@+id/profileName"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/profilePaidMethod"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_credit_card_24"
        android:outlineSpotShadowColor="@color/background"
        android:text="@string/profilePaidMethod"
        android:textAlignment="textStart"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@+id/profileAddresses"
        tools:layout_editor_absoluteX="-2dp" />

    <Button
        android:id="@+id/profileOrders"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_restore_24"
        android:outlineSpotShadowColor="@color/background"
        android:text="@string/profileOrders"
        android:textAlignment="textStart"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@+id/profilePaidMethod"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/profileNotifications"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_notifications_active_24"
        android:outlineSpotShadowColor="@color/background"
        android:text="@string/profileNotifications"
        android:textAlignment="textStart"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@+id/profileOrders"
        tools:layout_editor_absoluteX="-26dp" />

    <Button
        android:id="@+id/profileChangePassword"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:outlineSpotShadowColor="@color/background"
        android:text="@string/profileChangePassword"
        android:textAlignment="textStart"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@+id/profileNotifications"
        tools:layout_editor_absoluteX="-16dp" />

    <Button
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profileCloseSession"
        android:layout_marginTop="28dp"
        android:drawableLeft="@drawable/ic_baseline_power_settings_new_24"
        android:text="@string/profileCloseSession"
        android:textAlignment="textStart"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/profileChangePassword" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="112dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="164dp" />

</androidx.constraintlayout.widget.ConstraintLayout>