<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:id="@+id/addressFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/standard_bottom_sheet"
        android:layout_width="412dp"
        android:layout_height="500dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
        <!-- Bottom sheet contents. -->

        <Button
            android:id="@+id/locationCloseButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="68dp"
            android:layout_height="41dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="X"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/locationTitle"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/locationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:text="@string/locationTitle"
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/locationCurrentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:text="@string/locationCurrentTitle"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationTitle" />

        <TextView
            android:id="@+id/locationAddressDescription"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:padding="10dp"
            android:text="@string/locationAddressDescription"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationCurrentTitle" />

        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:drawableLeft="@drawable/ic_baseline_my_location_24"
            android:text="@string/locationUpdate"
            android:textColor="@color/background"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationAddressDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>